myapp-test/version1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webshop
    type: canary
    version: v1
  name: webshop-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webshop
      version: v1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webshop
        type: canary
        version: v1
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        resources: {}
        volumeMounts:
        - name: configfile
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: configfile
        configMap:
          name: version-one
status: {}
