myapp-test/webshop-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webshop
    type: canary
    version: v1
  name: webshop
  namespace: default
spec:
  clusterIP: 10.106.225.111
  clusterIPs:
  - 10.106.225.111
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    nodePort: 32000
    protocol: TCP
    targetPort: 80
    name: http-webshop
  selector:
    app: webshop
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
