myapp-test/virtual-service-webshop-80-20.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webshop
spec:
  gateways:
    - webshop-gateway
  hosts:
    - webshop
  http:
  - route:
    - destination:
        host: webshop
        subset: v1
      weight: 60
    - destination:
        host: webshop
        subset: v2
      weight: 20
    - destination:
        host: webshop
        subset: v3
      weight: 20
